Fixed Nav not wrapping - Added flex-wrap - Removed 'medium.css' references - Changed nav link color

--- a/lesson03/css/small.css
+++ b/lesson03/css/small.css
@@ -38,11 +38,17 @@ nav{
 }
 nav ul {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
     list-style: none;
 }
 nav ul li a{
     text-decoration: none;
+    color: rgba(255, 255, 255, 0.685);
+}
+nav ul li a:hover {
+    box-shadow: -1px 1px 33px 1px rgba(0, 0, 0, 0.384);
+    border-radius: 5em;
 }
 
 #Footer {
